fix link jump on iphone

--- a/docs/stylesheets/common.css
+++ b/docs/stylesheets/common.css
@@ -3,7 +3,6 @@ body {
   overflow: auto;
 }
 header {
-  background-image: ;
   height: 200px;
   width: 100%;
   background-color: black;
